--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=BarberShop
+application.vendor=Renato Felix
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,11 +33,18 @@ dist.jar=${dist.dir}/BarberShop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BarberShop
+endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=lib\\activation-1.1.1.jar
+file.reference.commons-email-1.3.1.jar=lib\\commons-email-1.3.1.jar
+file.reference.mail-1.4.5.jar=lib\\mail-1.4.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.commons-email-1.3.1.jar}:\
+    ${file.reference.mail-1.4.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
